crates/aven-check/tests/fixtures/check/valid/recursive-type.av
Tree = { value: Int, children: Tree }
