crates/aven-check/tests/fixtures/check/invalid/lowercase-variant-tag.av
value : @{ ok(Int), @Err(Text) } = value
